--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.starway.starrobot"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -14,9 +14,8 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
-    }
-
 
 
     /*********** 星途签名配置***********/
@@ -46,7 +45,8 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.0.0-beta1'
+    implementation 'com.android.support:support-v4:28.0.0'//0.0
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
@@ -64,17 +64,20 @@ dependencies {
 
     implementation files('libs/usbprintsdk-v2.11.jar')
 
-    implementation  'com.android.support:support-v4:26+'
+    implementation 'com.android.support:support-v4:28.0.0'
 
 
     //引入Room的包，下载相关文件
     def room_version = "2.2.0-alpha01"
+    def lifecycle_version="2.2.0-alpha01"
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    // For Kotlin use kapt instead of annotationProcessor
 
     // Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
-
+    implementation 'android.arch.lifecycle:livedata:1.1.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
 //强制使用版本 为26.0.0 ，整治引包版本不同。
 configurations.all {
@@ -82,7 +85,7 @@ configurations.all {
         def requested = details.requested
         if (requested.group == 'com.android.support') {
             if (!requested.name.startsWith("multidex")) {
-                details.useVersion '26.0.0'
+                details.useVersion '26.1.0'
             }
         }
     }
